SDC-5342: JDK7: Remove JDK7 specific variables from start scripts
Change-Id: I8b8302475c8afa430a58086514ba9ce8bc2239bc
Reviewed-on: https://review.streamsets.net/6660
Reviewed-by: Adam Kunicki <adam@streamsets.com>
Reviewed-by: Hari Shreedharan <hshreedharan@streamsets.com>
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>